<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                style="@style/settings_label"
            android:text="@string/search_radius"/>
        <EditText
                style="@style/settings_edittext_number"
                android:id="@+id/searchRadiusET"
                android:maxLength="4"/>
        <TextView
                style="@style/settings_label"
                android:text="@string/listview_order"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:id="@+id/listViewOrderRG">
            <RadioButton
                    android:id="@+id/byDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shortest_distance"
                    android:checked="true" />
            <RadioButton
                    android:id="@+id/byRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highest_rating" />
            <RadioButton
                    android:id="@+id/byWorkmates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_workmates" />
            <RadioButton
                    android:id="@+id/byName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alphabetical" />
        </RadioGroup>
    </LinearLayout>
    </ScrollView>