<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
            style="@style/restaurant_tab"
            android:id="@+id/callTab">
        <ImageView
                style="@style/restaurant_tab_image"
                android:src="@drawable/call" />
        <TextView
                style="@style/restaurant_tab_text"
                android:text="@string/call" />
    </LinearLayout>
    <LinearLayout
            style="@style/restaurant_tab"
            android:id="@+id/likeTab">
        <ImageView
                style="@style/restaurant_tab_image"
                android:src="@drawable/star" />
        <TextView
                style="@style/restaurant_tab_text"
                android:text="@string/like" />
    </LinearLayout>
    <LinearLayout
            style="@style/restaurant_tab"
            android:id="@+id/websiteTab">
        <ImageView
                style="@style/restaurant_tab_image"
                android:src="@drawable/website" />
        <TextView
                style="@style/restaurant_tab_text"
                android:text="@string/website" />
    </LinearLayout>
</LinearLayout>